--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,202 +4,212 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  /* bg-[conic-gradient(at_bottom_left,_var(--tw-gradient-stops))] from-[#0f172a]  to-[#334155] */
-  --background-gradient: conic-gradient(at bottom left, #fef3f2, #fee2e1);
-  --background: #ffffff;
-  --foreground: #0a0a0a;
-  --card: #ffffff;
-  --card-foreground: #0a0a0a;
-  --popover: #ffffff;
-  --popover-foreground: #0a0a0a;
-  --primary: #ee4035;
-  --primary-foreground: #ffffff;
-  --secondary: #f1f5f9;
-  --secondary-foreground: #0a0a0a;
-  --muted: #fed5d3;
-  --muted-foreground: #64748b;
-  --accent: #f1f5f9;
-  --accent-foreground: #0a0a0a;
-  --destructive: #ef4444;
-  --destructive-foreground: #ffffff;
-  --border: #e2e8f0;
-  --input: #e2e8f0;
-  --ring: #ee4035;
-  --chart-1: #ee4035;
-  --chart-2: #f5655c;
-  --chart-3: #f88a83;
-  --chart-4: #fbb0ab;
-  --chart-5: #fed5d3;
-  --sidebar: #ffffff;
-  --sidebar-foreground: #0a0a0a;
-  --success: #22c55e;
-  --yellow: #efbf04;
-  --sidebar-primary: #ee4035;
-  --sidebar-primary-foreground: #ffffff;
-  --sidebar-accent: #f1f5f9;
-  --sidebar-accent-foreground: #0a0a0a;
-  --sidebar-border: #e2e8f0;
-  --sidebar-ring: #ee4035;
-  --font-sans: Inter;
-  --font-serif: serif;
-  --font-mono: monospace;
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
-  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
-  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0.10), 0px 1px 2px -3px hsl(0 0% 0% / 0.10);
-  --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0.10), 0px 1px 2px -3px hsl(0 0% 0% / 0.10);
-  --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0.10), 0px 2px 4px -3px hsl(0 0% 0% / 0.10);
-  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0.10), 0px 4px 6px -3px hsl(0 0% 0% / 0.10);
-  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.10), 0px 8px 10px -3px hsl(0 0% 0% / 0.10);
-  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
-  --tracking-normal: 0rem;
-  --spacing: 0.25rem;
+    /* bg-[conic-gradient(at_bottom_left,_var(--tw-gradient-stops))] from-[#0f172a]  to-[#334155] */
+    --background-gradient: conic-gradient(at bottom left, #fef3f2, #fee2e1);
+    --background: #ffffff;
+    --foreground: #0a0a0a;
+    --card: #ffffff;
+    --card-foreground: #0a0a0a;
+    --popover: #ffffff;
+    --popover-foreground: #0a0a0a;
+    --primary: #ee4035;
+    --primary-foreground: #ffffff;
+    --secondary: #f1f5f9;
+    --secondary-foreground: #0a0a0a;
+    --muted: #fed5d3;
+    --muted-foreground: #64748b;
+    --accent: #f1f5f9;
+    --accent-foreground: #0a0a0a;
+    --destructive: #ef4444;
+    --destructive-foreground: #ffffff;
+    --border: #e2e8f0;
+    --input: #e2e8f0;
+    --ring: #ee4035;
+    --chart-1: #ee4035;
+    --chart-2: #f5655c;
+    --chart-3: #f88a83;
+    --chart-4: #fbb0ab;
+    --chart-5: #fed5d3;
+    --sidebar: #ffffff;
+    --sidebar-foreground: #0a0a0a;
+    --success: #22c55e;
+    --yellow: #efbf04;
+    --sidebar-primary: #ee4035;
+    --sidebar-primary-foreground: #ffffff;
+    --sidebar-accent: #f1f5f9;
+    --sidebar-accent-foreground: #0a0a0a;
+    --sidebar-border: #e2e8f0;
+    --sidebar-ring: #ee4035;
+    --font-sans: Inter;
+    --font-serif: serif;
+    --font-mono: monospace;
+    --radius: 0.5rem;
+    --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.05);
+    --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0.1),
+        0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+    --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0.1),
+        0px 1px 2px -3px hsl(0 0% 0% / 0.1);
+    --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0.1),
+        0px 2px 4px -3px hsl(0 0% 0% / 0.1);
+    --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0.1),
+        0px 4px 6px -3px hsl(0 0% 0% / 0.1);
+    --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.1),
+        0px 8px 10px -3px hsl(0 0% 0% / 0.1);
+    --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
+    --tracking-normal: 0rem;
+    --spacing: 0.25rem;
 }
 
 .dark {
-  --background-gradient: conic-gradient(at bottom left, #0f172a, #334155);
-  --background: #000000;
-  --foreground: #ffffff;
-  --card: #0a0a0a;
-  --card-foreground: #ffffff;
-  --popover: #0a0a0a;
-  --popover-foreground: #ffffff;
-  --primary: #ee4035;
-  --primary-foreground: #ffffff;
-  --secondary: #1e293b;
-  --secondary-foreground: #ffffff;
-  --muted: #1e293b;
-  --muted-foreground: #94a3b8;
-  --accent: #1e293b;
-  --accent-foreground: #ffffff;
-  --destructive: #ef4444;
-  --destructive-foreground: #ffffff;
-  --border: #1e293b;
-  --input: #1e293b;
-  --ring: #ee4035;
-  --chart-1: #ee4035;
-  --chart-2: #f5655c;
-  --chart-3: #f88a83;
-  --chart-4: #fbb0ab;
-  --success: #22c55e;
-  --chart-5: #fed5d3;
-   --yellow: #efbf04;
-  --sidebar: #000000;
-  --sidebar-foreground: #ffffff;
-  --sidebar-primary: #ee4035;
-  --sidebar-primary-foreground: #ffffff;
-  --sidebar-accent: #1e293b;
-  --sidebar-accent-foreground: #ffffff;
-  --sidebar-border: #1e293b;
-  --sidebar-ring: #ee4035;
-  --font-sans: Inter;
-  --font-serif: serif;
-  --font-mono: monospace;
-  --radius: 0.5rem;
-  --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
-  --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
-  --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0.50), 0px 1px 2px -3px hsl(0 0% 0% / 0.50);
-  --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0.50), 0px 1px 2px -3px hsl(0 0% 0% / 0.50);
-  --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0.50), 0px 2px 4px -3px hsl(0 0% 0% / 0.50);
-  --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0.50), 0px 4px 6px -3px hsl(0 0% 0% / 0.50);
-  --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.50), 0px 8px 10px -3px hsl(0 0% 0% / 0.50);
-  --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 1.25);
+    --background-gradient: conic-gradient(at bottom left, #0f172a, #334155);
+    --background: #000000;
+    --foreground: #ffffff;
+    --card: #0a0a0a;
+    --card-foreground: #ffffff;
+    --popover: #0a0a0a;
+    --popover-foreground: #ffffff;
+    --primary: #ee4035;
+    --primary-foreground: #ffffff;
+    --secondary: #1e293b;
+    --secondary-foreground: #ffffff;
+    --muted: #1e293b;
+    --muted-foreground: #94a3b8;
+    --accent: #1e293b;
+    --accent-foreground: #ffffff;
+    --destructive: #ef4444;
+    --destructive-foreground: #ffffff;
+    --border: #1e293b;
+    --input: #1e293b;
+    --ring: #ee4035;
+    --chart-1: #ee4035;
+    --chart-2: #f5655c;
+    --chart-3: #f88a83;
+    --chart-4: #fbb0ab;
+    --success: #22c55e;
+    --chart-5: #fed5d3;
+    --yellow: #efbf04;
+    --sidebar: #000000;
+    --sidebar-foreground: #ffffff;
+    --sidebar-primary: #ee4035;
+    --sidebar-primary-foreground: #ffffff;
+    --sidebar-accent: #1e293b;
+    --sidebar-accent-foreground: #ffffff;
+    --sidebar-border: #1e293b;
+    --sidebar-ring: #ee4035;
+    --font-sans: Inter;
+    --font-serif: serif;
+    --font-mono: monospace;
+    --radius: 0.5rem;
+    --shadow-2xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
+    --shadow-xs: 0px 4px 8px -2px hsl(0 0% 0% / 0.25);
+    --shadow-sm: 0px 4px 8px -2px hsl(0 0% 0% / 0.5),
+        0px 1px 2px -3px hsl(0 0% 0% / 0.5);
+    --shadow: 0px 4px 8px -2px hsl(0 0% 0% / 0.5),
+        0px 1px 2px -3px hsl(0 0% 0% / 0.5);
+    --shadow-md: 0px 4px 8px -2px hsl(0 0% 0% / 0.5),
+        0px 2px 4px -3px hsl(0 0% 0% / 0.5);
+    --shadow-lg: 0px 4px 8px -2px hsl(0 0% 0% / 0.5),
+        0px 4px 6px -3px hsl(0 0% 0% / 0.5);
+    --shadow-xl: 0px 4px 8px -2px hsl(0 0% 0% / 0.5),
+        0px 8px 10px -3px hsl(0 0% 0% / 0.5);
+    --shadow-2xl: 0px 4px 8px -2px hsl(0 0% 0% / 1.25);
 }
 
 @theme inline {
-  --yellow: #efbf04;
-  --success: #22c55e;
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-secondary: var(--secondary);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-muted: var(--muted);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-destructive: var(--destructive);
-  --color-destructive-foreground: var(--destructive-foreground);
-  --color-border: var(--border);
-  --color-input: var(--input);
-  --color-ring: var(--ring);
-  --color-chart-1: var(--chart-1);
-  --color-chart-2: var(--chart-2);
-  --color-chart-3: var(--chart-3);
-  --color-chart-4: var(--chart-4);
-  --color-chart-5: var(--chart-5);
-  --color-sidebar: var(--sidebar);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring);
+    --yellow: #efbf04;
+    --success: #22c55e;
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --color-card: var(--card);
+    --color-card-foreground: var(--card-foreground);
+    --color-popover: var(--popover);
+    --color-popover-foreground: var(--popover-foreground);
+    --color-primary: var(--primary);
+    --color-primary-foreground: var(--primary-foreground);
+    --color-secondary: var(--secondary);
+    --color-secondary-foreground: var(--secondary-foreground);
+    --color-muted: var(--muted);
+    --color-muted-foreground: var(--muted-foreground);
+    --color-accent: var(--accent);
+    --color-accent-foreground: var(--accent-foreground);
+    --color-destructive: var(--destructive);
+    --color-destructive-foreground: var(--destructive-foreground);
+    --color-border: var(--border);
+    --color-input: var(--input);
+    --color-ring: var(--ring);
+    --color-chart-1: var(--chart-1);
+    --color-chart-2: var(--chart-2);
+    --color-chart-3: var(--chart-3);
+    --color-chart-4: var(--chart-4);
+    --color-chart-5: var(--chart-5);
+    --color-sidebar: var(--sidebar);
+    --color-sidebar-foreground: var(--sidebar-foreground);
+    --color-sidebar-primary: var(--sidebar-primary);
+    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+    --color-sidebar-accent: var(--sidebar-accent);
+    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+    --color-sidebar-border: var(--sidebar-border);
+    --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
+    --font-sans: var(--font-sans);
+    --font-mono: var(--font-mono);
+    --font-serif: var(--font-serif);
 
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
 
-  --shadow-2xs: var(--shadow-2xs);
-  --shadow-xs: var(--shadow-xs);
-  --shadow-sm: var(--shadow-sm);
-  --shadow: var(--shadow);
-  --shadow-md: var(--shadow-md);
-  --shadow-lg: var(--shadow-lg);
-  --shadow-xl: var(--shadow-xl);
-  --shadow-2xl: var(--shadow-2xl);
+    --shadow-2xs: var(--shadow-2xs);
+    --shadow-xs: var(--shadow-xs);
+    --shadow-sm: var(--shadow-sm);
+    --shadow: var(--shadow);
+    --shadow-md: var(--shadow-md);
+    --shadow-lg: var(--shadow-lg);
+    --shadow-xl: var(--shadow-xl);
+    --shadow-2xl: var(--shadow-2xl);
 
-  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
-  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
-  --tracking-normal: var(--tracking-normal);
-  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
-  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
-  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+    --tracking-normal: var(--tracking-normal);
+    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
 body {
-  letter-spacing: var(--tracking-normal);
+    letter-spacing: var(--tracking-normal);
 }
 
 .font-aclonica {
-  font-family: "Aclonica", sans-serif;
+    font-family: "Aclonica", sans-serif;
 }
 
 .font-outfit {
-  font-family: "Outfit", sans-serif;
+    font-family: "Outfit", sans-serif;
 }
 
 .font-krona {
-  font-family: "Krona One", sans-serif;
+    font-family: "Krona One", sans-serif;
 }
 
 .font-mogra {
-  font-family: "Mogra", cursive;
+    font-family: "Mogra", cursive;
 }
 
 .font-modak {
-  font-family: "Modak", sans-serif;
+    font-family: "Modak", sans-serif;
 }
 
 .font-lemon {
-  font-family: "Lemon", cursive;
+    font-family: "Lemon", cursive;
 }
 
 .font-piedra {
-  font-family: "Piedra", cursive;
+    font-family: "Piedra", cursive;
 }
 
 .font-poetsen {
-  font-family: "Poetsen One", sans-serif;
+    font-family: "Poetsen One", sans-serif;
 }
