fix: fixed code

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -96,7 +96,7 @@
     --sidebar-accent: #1e293b;
     --sidebar-accent-foreground: #ffffff;
     --sidebar-border: #1e293b;
-    --sidebar-ring: #ee4035;
+    --sidebar-ring: #010101;
     --font-sans: Inter;
     --font-serif: serif;
     --font-mono: monospace;
